modifying the project files

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
 
     <footer class="site-footer">
         <div class="container">
-            <small>© CineScope • Prototype</small>
+            <p>Contact us at: +975 17827346 | +975 77190817</p>
+            <p>Email: cinescope@sce.rub.edu.bt | <a href="privacy.html">Privacy Policy</a></p>
+            <small>© CineScope</small>
         </div>
     </footer>
+
 
     <template id="card-tpl">
         <article class="card">
@@ -81,7 +84,7 @@
 
     <div id="toast" class="toast hidden"></div>
 
-     <script src="app.js" defer></script>
+    <script src="app.js" defer></script>
     <script>
         // Redirect to login if not logged in
         if (localStorage.getItem("isLoggedIn") !== "true") {
