--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,27 +8,70 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #141e30, #243b55);
+      /* Full-screen background image */
+      background: url('background.jpg') no-repeat center center/cover;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       color: white;
       margin: 0;
+      position: relative;
     }
+
+    /* Add a dark overlay for readability */
+    body::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      /* dark semi-transparent overlay */
+      z-index: 0;
+    }
+
     .container {
       background: rgba(255, 255, 255, 0.1);
+      /* slightly transparent form background */
       padding: 30px;
       width: 350px;
       border-radius: 15px;
       text-align: center;
+      z-index: 1;
+      /* above the overlay */
+      position: relative;
+      backdrop-filter: blur(10px);
+      /* optional: glassmorphism effect */
     }
-    input, button { width: 90%; padding: 10px; margin-top: 10px; }
-    button { background: #f39c12; border: none; border-radius: 5px; color: white; cursor: pointer; }
-    .hidden { display: none; }
-    a { color: #f39c12; cursor: pointer; }
+
+    input,
+    button {
+      width: 90%;
+      padding: 10px;
+      margin-top: 10px;
+    }
+
+    button {
+      background: #f39c12;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      cursor: pointer;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    a {
+      color: #f39c12;
+      cursor: pointer;
+    }
   </style>
 </head>
+
 <body>
 
   <div class="container">
@@ -52,8 +96,8 @@
   <script>
 
     if (localStorage.getItem("isLoggedIn") === "true") {
-  window.location.href = "index.html";
-}
+      window.location.href = "index.html";
+    }
 
     // Get input fields
     const loginUsername = document.getElementById("loginUsername");
@@ -79,7 +123,7 @@
 
     // Sign up function
     function signup() {
-      if (!signupUsername.value||!signupEmail.value||!signupPassword.value) {
+      if (!signupUsername.value || !signupEmail.value || !signupPassword.value) {
         alert("Please fill in all fields.");
         return;
       }
@@ -110,4 +154,5 @@
 
 
 </body>
+
 </html>
