modifying the project files

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--Contributed by: Jamyang Choden, Kezang Dema, Jigme Wangchuk-->
+
 <!doctype html>
 <html lang="en">
 
@@ -20,6 +22,7 @@
             <div class="search-wrap">
                 <input id="search-input" type="search" placeholder="Search movies or TV shows..." />
                 <button id="search-btn" class="btn small">Search</button>
+
                 <select id="genreSelect">
                     <option value="all">All Genres</option>
                     <option value="28">Action</option>
@@ -43,6 +46,8 @@
                     <option value="37">Western</option>
                 </select>
             </div>
+
+
 
             <nav class="nav">
                 <button class="nav-btn" data-route="home">Home</button>
